--- a/src/style.css
+++ b/src/style.css
@@ -50,27 +50,36 @@ header {
     transform: scale(1.10);
 }
 
-header ul li {
+header ul a {
     display: inline-block;
     margin: 0px 10px;
     transform: scale(1);
     font-size: 10px;
     transition: color 0.5s, transform 0.5s;
 }
-header ul li a  {
+header ul a li  {
     font-family: "Montserrat", sans-serif;
 
     font-weight: normal;
     font-size: 17px;
     
 }
+header ul  li {
+    display: flex;
+    transition: color 0.5s, transform 0.5s;
+}
 
+.btn{
+    display: flex;
+  
+}
 .banner {
     object-fit: cover;
     object-position: 50% 50%;
     position: absolute;
     z-index: -1;
-   
+    height: 90vh;
+    top: 0;   
 }
 .banner img {
     height: 90vh;
@@ -118,16 +127,24 @@ header ul li a  {
 }
 
 #text .sobre {
-    font-family: avenir-lt-w01_35-light1475496, sans-serif;
-    font-weight: normal;
+    font-family: "Montserrat", sans-serif;
+    font-weight: normal;    
     font-size: 22px;
     text-align: left;
     width: 65%;
     margin-left: 400px;
     margin-top: 70px;
+    color: black;
+
 
 }
 
+
+.containerMotorista{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
 #img {
     width: 70%;
     height: 110vh;
@@ -146,15 +163,20 @@ header ul li a  {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 140px;
+    width: 160px;
     height: 45px;
     background-color: black;
+    margin-right: 30px;
+    margin-left: 30px;
     margin-right: 30px;
     border-radius: 10px;
     color: white;
 }
 .botaoDownload p {
     color: white;
+    font-family: "Montserrat", sans-serif;
+    font-weight: normal;
+    margin-left: 9px;
 
 }
 .aa img{
@@ -227,12 +249,12 @@ header ul li a  {
 .menu-mobile .btn-fechar{
     padding: 20px 5%;
 }
-.menu-mobile nav ul li a  {
+.menu-mobile nav ul a li{
     padding: 20px 4%;
     font-family: "Nunito", sans-serif;
-    font-size: 20px;
+    font-size: 40px;
 }
-.menu-mobile nav ul li a:hover  {
+.menu-mobile nav ul a li:hover  {
     background-color: #FFDE32 ;
     width: 99.1%;
     text-align: right;
@@ -272,17 +294,17 @@ button p {
 
 .botoes {
     display: flex;
-    width: 50%;
+    width: 100%;
     justify-content: center;
     margin-top: 70px;
 }
 #downloadTop{
-       display: flex;
-    width: 60%;
-    justify-content: flex-end;
+    display: flex;
+    justify-content: center;
     margin-top: 70px;
-
 }
+
+
 #download p {
     color: black;
 }
@@ -304,7 +326,7 @@ button:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: 40px;
+    padding: 100px 0px;
 }
 
 #service h1 {
@@ -324,8 +346,9 @@ button:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+        margin-top: 100px;
     gap: 20px;
-    max-width: 1000px;
+
 }
 
 .card {
@@ -439,10 +462,10 @@ p.phone{
     margin-bottom: 20px;
 }
 .underline{
-    width: 100px;
+    width: 200px;
     height: 3px;
     position: relative;
-    background-color: white;
+    background-color: #F8BC14;
     margin-top: 5px;
     margin-bottom: 20px;
     border-radius: 3px;
@@ -462,7 +485,9 @@ p.phone{
 .funcionalidades{
     visibility: hidden;
 }
-
+.funcionalidades p {
+    width: 100%;
+}
 @keyframes moving {
     0%{
         left: -20px;
@@ -574,11 +599,23 @@ p.phone{
 }
 #motorista{
 margin-top: 200px;
-background-color: aliceblue;
+background-color: white;
+height: 100%;
+display: flex;
+flex-direction: column;
+padding: 120px 0px;
 
     
 }
+.celularMotorista{
+     width: 70%;
+    display: flex;
+    justify-content: center;
+}
 
+.containerMotorista .botaoDownload{
+    width: 240px;
+}
 .imagemMotorista  {
     display: flex;
     align-items:center ;
@@ -591,7 +628,12 @@ background-color: aliceblue;
 }
    
 .informacoesMotorista{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+    margin-top: 90px;
+
   
 }
 .textoMotorista{
@@ -603,40 +645,52 @@ background-color: aliceblue;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px 100px;
-    width: 50%;
+
+    width: 100%;
 }
 .funcionalidades span{
-    color: #FFDE32;
-    font-size:100px;
+    color: #F8BC14;
+    font-size: 50px;
     margin-right: 20px;
 
 }
 .textoMotorista h4{
     font-family: "Montserrat", sans-serif;
-    font-size: 22px;
+  font-size: 22px;
     margin-top: 40px;
     color: black;
 }
 .funcionalidades h2{
     font-family: "Nunito", sans-serif;
-    font-size: 38px ;
-    color: #FFDE32;
+    font-size: 28px ;
+    color: #F8BC14;
+    text-align: center;
     
+}
+.funcionalidades h4{
+    color: black;
+    text-align: center;
 }
 .funcionalidades p{
     font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-    font-weight:  normal;
-    width: 50%;
+    font-size: 14px;
+    font-weight: normal;
+    width: 90%;
     color: black;
+    text-align: center;
        
+}
+.colunaMotorista{
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 #motorista h1{
     font-family: "Montserrat", sans-serif;
     font-size: 35px ;
     font-weight: 400;
-    text-shadow: 0px 0px 50px yellow;
+   
     color: black;
     text-align: center;
  
