--- a/src/style.css
+++ b/src/style.css
@@ -159,11 +159,82 @@ header ul  li {
   
 
 }
+#passageiro{
+    height: 100%;
+    background-color: #3E3E3E;
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.left{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+}
+.right{
+    width: 60%;
+    text-align: center; 
+
+}
+.areaCards{
+ 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+main{
+    width: 100%;
+    display: flex;
+}
+.passageiroCard{
+    width: 240px;
+    margin: 30px 30px;
+}
+.img img{
+    width: 250px;
+    
+  
+}
+.textPassageiro{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    padding: 50px 0px;
+}
+.textPassageiro h1{
+
+}
+.textPassageiro p{
+
+}
+.botaoDownloadPassageiro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 45px;
+    background-color: black;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-radius: 10px;
+    color: white;
+}
+.botaoDownloadPassageiro p {
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-weight: normal;
+    margin-left: 9px;
+
+}
 .botaoDownload{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 160px;
+    width: 150px;
     height: 45px;
     background-color: black;
     margin-right: 30px;
@@ -614,7 +685,7 @@ padding: 120px 0px;
 }
 
 .containerMotorista .botaoDownload{
-    width: 240px;
+    width: 150px;
 }
 .imagemMotorista  {
     display: flex;
