--- a/src/style.css
+++ b/src/style.css
@@ -142,6 +142,7 @@ header ul  li {
 
 .containerMotorista{
     display: flex;
+    align-items: center;
     flex-direction: row;
     width: 100%;
 }
@@ -211,15 +212,16 @@ main{
 
 }
 .botaoDownloadPassageiro{
-    display: flex;
+display: flex;
     justify-content: center;
     align-items: center;
-    width: 150px;
+    width: 170px;
     height: 45px;
     background-color: black;
     margin-right: 30px;
     margin-left: 30px;
     margin-right: 30px;
+    padding: 4px 10px;
     border-radius: 10px;
     color: white;
 }
@@ -234,12 +236,13 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 150px;
+    width: 170px;
     height: 45px;
     background-color: black;
     margin-right: 30px;
     margin-left: 30px;
     margin-right: 30px;
+    padding: 4px 10px;
     border-radius: 10px;
     color: white;
 }
@@ -256,20 +259,18 @@ main{
 }
 
 .cadastro {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #F8BC14;
     border: none;
     color: black;
-    padding: 7px 100px;
+    padding: 3px 0px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
     cursor: pointer;
     border-radius: 50px;
-    width: 250px;
+    width: 220px;
     height: auto;
+    margin: 0px 20px;
     transform: scale(1);
     transition: color 0.5s, transform 0.5s;
 }
@@ -537,8 +538,7 @@ p.phone{
     height: 3px;
     position: relative;
     background-color: #F8BC14;
-    margin-top: 5px;
-    margin-bottom: 20px;
+    margin: 20px 0px;
     border-radius: 3px;
     overflow: hidden;
 }
@@ -626,13 +626,12 @@ p.phone{
     margin: 6px 0;
 }
 #cartaoFidelidade{
-    align-items: center;
     display: flex;
-    justify-content: center;
     text-align: center;
-   margin-top: 200px;
-   height: 80vh;
-   
+    margin-top: 200px;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
 #cartaoFidelidade h1{
     font-family: "Montserrat", sans-serif;
@@ -685,7 +684,7 @@ padding: 120px 0px;
 }
 
 .containerMotorista .botaoDownload{
-    width: 150px;
+    width: 170px;
 }
 .imagemMotorista  {
     display: flex;
@@ -695,7 +694,7 @@ padding: 120px 0px;
 
 } 
 .imagemMotorista img{
-    width: 300px;
+    width: 350px;
 }
    
 .informacoesMotorista{
@@ -717,7 +716,7 @@ padding: 120px 0px;
     flex-direction: column;
     align-items: center;
 
-    width: 100%;
+    width: 50%;
 }
 .funcionalidades span{
     color: #F8BC14;
@@ -736,6 +735,7 @@ padding: 120px 0px;
     font-size: 28px ;
     color: #F8BC14;
     text-align: center;
+    width: 101%;
     
 }
 .funcionalidades h4{
@@ -777,10 +777,16 @@ padding: 120px 0px;
     font-family: "Montserrat", sans-serif;
     font-size: 20px ;
     font-weight: 400;
-    text-shadow: 0px 0px 50px yellow;
+    
     color: black;
     text-align: center;
  
+}
+article{
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .textoMotorista .underline {
