--- a/src/style.css
+++ b/src/style.css
@@ -162,17 +162,35 @@ header ul  li {
 }
 #passageiro{
     height: 100%;
+    padding: 50px 0px;
     background-color: #3E3E3E;
     display: flex;
     flex-direction: column;
 
 
 }
-
+.passageiroCard p{
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    text-align: center;
+    
+}
+.passageiroCard h1{
+    font-family: "Nunito", sans-serif;
+    font-size: 24px;
+    color: #F8BC14;
+    text-align: center;
+    width: 101%;
+    margin: 20px 0px;
+}
+.passageiroCard img{
+    width: 50px;
+}
 .left{
     width: 50%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     text-align: center;
 }
 .right{
@@ -181,19 +199,20 @@ header ul  li {
 
 }
 .areaCards{
- 
+    width: 80%;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    width: 70%;
+    justify-content: flex-end;
 }
 main{
     width: 100%;
     display: flex;
 }
 .passageiroCard{
-    width: 240px;
-    margin: 30px 30px;
+    width: 47%;
+    margin: 0px 10px;
+    text-align: center;
 }
 .img img{
     width: 350px;
@@ -208,10 +227,18 @@ main{
     padding: 50px 0px;
 }
 .textPassageiro h1{
-
+    font-family: "Montserrat", sans-serif;
+    font-size: 35px;
+    font-weight: 400;
+   
+    text-align: center;
 }
 .textPassageiro p{
+    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
 
+    text-align: center;
 }
 .botaoDownloadPassageiro{
 display: flex;
@@ -670,12 +697,11 @@ p.phone{
     color: #FFDE32;
 }
 #motorista{
-margin-top: 200px;
-background-color: white;
-height: 100%;
-display: flex;
-flex-direction: column;
-padding: 120px 0px;
+    background-color: white;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 60px 0px;
 
     
 }
@@ -734,7 +760,7 @@ padding: 120px 0px;
 }
 .funcionalidades h2{
     font-family: "Nunito", sans-serif;
-    font-size: 28px ;
+    font-size: 25px ;
     color: #F8BC14;
     text-align: center;
     width: 101%;
@@ -753,12 +779,7 @@ padding: 120px 0px;
     text-align: center;
        
 }
-.colunaMotorista{
-    width: 15%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
+
 #motorista h1{
     font-family: "Montserrat", sans-serif;
     font-size: 35px ;
