--- a/src/style.css
+++ b/src/style.css
@@ -240,28 +240,16 @@ main{
 
     text-align: center;
 }
-.botaoDownloadPassageiro{
-display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 170px;
-    height: 45px;
-    background-color: black;
-    margin-right: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
-    padding: 4px 10px;
-    border-radius: 10px;
-    color: white;
-}
-.botaoDownloadPassageiro p {
-    color: white;
-    font-family: "Montserrat", sans-serif;
-    font-weight: normal;
-    margin-left: 9px;
 
-}
 .botaoDownload{
+    transform: scale(1);
+    transition: color 0.5s, transform 0.5s;
+}
+.botaoDownloadPassageiro{
+    transform: scale(1);
+    transition: color 0.5s, transform 0.5s;
+}
+.botaoDownloadPassageiro a{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -274,6 +262,30 @@ display: flex;
     padding: 4px 10px;
     border-radius: 10px;
     color: white;
+
+}
+.botaoDownloadPassageiro  p {
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-weight: normal;
+    margin-left: 9px;
+
+}
+.botaoDownload a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 45px;
+    background-color: black;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 4px 10px;
+    border-radius: 10px;
+    color: white;
+    transform: scale(1);
+    transition: color 0.5s, transform 0.5s;
 }
 .botaoDownload p {
     color: white;
@@ -282,10 +294,7 @@ display: flex;
     margin-left: 9px;
 
 }
-.aa img{
-    width: 20px;
-    height: 20px;
-}
+
 
 .cadastro {
     background-color: #F8BC14;
@@ -399,10 +408,10 @@ button p {
     justify-content: center;
     margin-top: 70px;
 }
-#downloadTop{
+#downloadTop a{
     display: flex;
     justify-content: center;
-    margin-top: 70px;
+  
 }
 
 
@@ -711,9 +720,12 @@ p.phone{
     justify-content: center;
 }
 
-.containerMotorista .botaoDownload{
+.containerMotorista .botaoDownload a{
     width: 170px;
+    transform: scale(1);
+    transition: color 0.5s, transform 0.5s;
 }
+
 .imagemMotorista  {
     display: flex;
     align-items:center ;
@@ -830,6 +842,12 @@ footer ul li a:hover{
     color: #FFDE32;
 }
 
+.botaoDownloadPassageiro:hover{
+    transform: scale(1.10);
+}
+.botaoDownload:hover{
+    transform: scale(1.10);
+}
 @media screen and (max-width: 767px){
 
 
