--- a/src/style.css
+++ b/src/style.css
@@ -846,7 +846,7 @@ footer h1,a{
 
     }
     body{
-        padding: 0px 1%;
+      
         width: 100%;
     }
     .mobile ul a li {
@@ -1103,5 +1103,7 @@ footer h1,a{
     .geral{
         flex-direction: column-reverse;
     }
-
+    #emailDireita p {
+        font-size: 15px;
+    }
 }  
