--- a/src/style.css
+++ b/src/style.css
@@ -17,8 +17,8 @@ body {
    
 }
 
-header {
-    background-color: #202020e6;
+#header {
+    background-color: #000000d7;
     height: 80px;
     width: 100%;
     display: flex;
@@ -30,8 +30,13 @@ header {
     align-items: center;
     border-bottom-right-radius: 30px;
     border-bottom-left-radius: 30px;
+    transition: 0.5s;
 }
 
+#header.scrollHide {
+    opacity: 0;
+    transition: 0.5s;
+  }
 
 .logo {
     transform: scale(1);
@@ -129,13 +134,14 @@ header ul  li {
 
 #text .sobre {
     font-family: "Montserrat", sans-serif;
-    font-weight: normal;    
-    font-size: 22px;
+    font-weight: bolder;    
+    font-size: 21px;
     text-align: left;
-    width: 65%;
+    width: 75%;
     margin-left: 400px;
     margin-top: 70px;
-    color: black;
+    color: #272b25;
+    line-height: 30px;
 
 
 }
@@ -158,14 +164,13 @@ header ul  li {
 }
 
 #img img {
-    width: 925px;
-    height: 600px;
+    height: 560px;
   
 
 }
 #passageiro{
-    height: 120vh;
     padding-top: 80px;
+    padding-bottom: 40px;
     background-color: #3E3E3E;
     display: flex;
     flex-direction: column;
@@ -187,13 +192,16 @@ header ul  li {
     width: 101%;
     margin: 20px 0px;
 }
+.funcionalidades img{
+    width: 50px;
+}
 .passageiroCard img{
     width: 50px;
 }
 .left{
-    width: 50%;
+    width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     text-align: center;
 }
 .right{
@@ -206,14 +214,14 @@ header ul  li {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: center;
 }
 main{
     width: 100%;
     display: flex;
 }
 .passageiroCard{
-    width: 47%;
+    width: 38%;
     margin: 0px 10px;
     text-align: center;
     height: 230px;
@@ -300,29 +308,7 @@ main{
 }
 
 
-.cadastro {
-    background-color: #F8BC14;
-    border: none;
-    color: black;
-    padding: 3px 0px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 50px;
-    width: 220px;
-    height: auto;
-    margin: 0px 20px;
-    transform: scale(1);
-    transition: color 0.5s, transform 0.5s;
-}
-.cadastro p{
-    color: black;
-    font-family: "Nunito", sans-serif;
-    font-size: 16px;
-    text-align: center;
-    width: 200px;
-}
+
 
 .mobile ul a li   {
     display: flex;
@@ -414,7 +400,7 @@ button p {
     display: flex;
     width: 100%;
     justify-content: center;
-    margin-top: 70px;
+   
 }
 #downloadTop a{
     display: flex;
@@ -477,7 +463,7 @@ button:hover {
     border: 3px solid #FFDE32;
     padding: 10px 20px;
     border-radius: 20px;
-    margin: 10px 20px;
+  
     text-align: left;
     display: flex;
     flex-direction: column;
@@ -587,7 +573,6 @@ button:hover {
     color: #FFDE32;
 }
 #motorista{
-    height: 120vh;
     display: flex;
     flex-direction: column;
     padding-top: 10px;
@@ -888,8 +873,8 @@ footer h1,a{
         width: 100%;
         height: 100%;
         display: flex;
-        justify-content: center;
-        margin: 50px 0px;
+        justify-content: flex-start;
+        margin: 20px 0px;
     }
     .btn{
         display: flex;
@@ -958,9 +943,7 @@ footer h1,a{
         flex-direction: column;
     }
     
-    .cadastro{
-         width: 100px;
-    } 
+  
     .underline{
         text-align: center;
         width: 100%;
